修改 session 有效期为12小时 in reading

--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -36,9 +36,8 @@
             </div>
              <div class="form-group">
                <label for="inputimgurl" class="col-sm-2 control-label">图片链接：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="imgurl" class="form-control" id="inputimgurl">
-                     <span class="helptext">如果忽略，将使用默认图片</span>
+                 <div class="col-sm-4">
+                     <input type="text" name="imgurl" class="form-control" id="inputimgurl" placeholder="如果忽略，将使用默认图片.">
                   </div>
             </div>
             <div class="form-group">
