--- a/reading/static/reading/css/mystyle.css
+++ b/reading/static/reading/css/mystyle.css
@@ -28,7 +28,7 @@ body div.book-li {
 }
 
 body {
-    background:url(../img/login.jpg) #f8f6e9;
+    background: #f8f6e9;
 }
 .mycenter{
     margin-top: 100px;
