--- a/reading/templates/upload.html
+++ b/reading/templates/upload.html
@@ -38,8 +38,7 @@
              <div class="form-group">
                <label for="inputimgurl" class="col-sm-2 control-label">图片链接：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="imgurl" class="form-control" id="inputimgurl">
-                     <span class="helptext">如果忽略，将使用默认图片</span>
+                     <input type="text" name="imgurl" class="form-control" id="inputimgurl" placeholder="如果忽略，将使用默认图片.">
                   </div>
             </div>
             <div class="form-group">
@@ -58,10 +57,10 @@
                         </select>
                   </div>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">-->
                <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
                <input type="file" name="file" id="inputfile" required>
-            </div>
+            <!--</div>-->
             <div class="form-action form-group">
                <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
                   <button type="submit" class="btn btn-primary">保存</button>
