修改 session 有效期为12小时 in reading

--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -8,9 +8,12 @@
     <meta name="keywords" content="Kindle,eBook,Read,Free,Push,mobi,pdf,免费,阅读,电子书">
     {% load static %}
     <link href="{% static '/reading/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/reading/css/bootstrapValidator.min.css' %}" rel="stylesheet">
     <link href="{% static '/reading/css/mystyle.css' %}" rel="stylesheet">
     <script src="{% static '/reading/scripts/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static '/reading/js/bootstrap.min.js' %}"></script>
+    <script src="{% static '/reading/js/bootstrapValidator.min.js' %}"></script>
+    <script src="{% static '/reading/js/reading.js' %}"></script>
 </head>
 <body>
 
