--- a/reading/templates/uploadfile.html
+++ b/reading/templates/uploadfile.html
@@ -42,7 +42,7 @@
             </div>
             <div class="form-group">
                <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
-               <input type="file" name="file" id="inputfile">
+               <input type="file" name="file" id="inputfile" required>
             </div>
             <div class="form-action form-group">
                <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
