--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -28,7 +28,7 @@
            <div class="form-group">
               <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                  <input type="text" class="form-control" placeholder="密码" name="password" />
+                  <input type="password" class="form-control" placeholder="密码" name="password" />
               </div>
           </div>
            <div class="form-group">
