修改 session 有效期为12小时 in reading

--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -15,7 +15,7 @@
 
 <div id="container" class='container'>
    <div class="mycenter">
-       <form action method="post" class="form form-horizontal" role="form">
+       <form action method="post" class="form form-horizontal" role="form">{% csrf_token %}
            <div class="col-lg-11 text-center text-info">
            <H2>请登录</H2>
            </div>
