--- a/reading/templates/register.html
+++ b/reading/templates/register.html
@@ -29,7 +29,7 @@
            <div class="form-group">
               <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                  <input type="email" class="form-control" placeholder="用户名" name="email" />
+                  <input type="email" class="form-control" placeholder="邮箱" name="email" />
               </div>
           </div>
            <div class="form-group">
