修改 session 有效期为12小时 in reading

--- a/reading/templates/register.html
+++ b/reading/templates/register.html
@@ -18,7 +18,7 @@
    <div class="mycenter">
        <form action method="post" class="form form-horizontal" role="form">{% csrf_token %}
            <div class="col-lg-11 text-center text-info">
-           <H2>请登录</H2>
+           <H2>请注册</H2>
            </div>
           <div class="form-group">
               <div class="input-group">
