--- a/reading/templates/uploadfile.html
+++ b/reading/templates/uploadfile.html
@@ -19,38 +19,41 @@
 
 
 <div id="container" class='container'>
-   <div class="row">
-      <div class="span6 left">
-         <form action enctype="multipart/form-data" class="form form-horizontal" role="form" method="post">{% csrf_token %}
-            <div class="form-group">
-               <label for="inputName" class="col-sm-2 control-label">书名：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="name" class="form-control" id="inputName" value="{{ book.name }}" disabled>
-                  </div>
-            </div>
-            <div class="form-group">
-               <label for="inputauthor" class="col-sm-2 control-label">作者：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="author" class="form-control" id="inputauthor" value="{{ book.author }}" disabled>
-                  </div>
-            </div>
-            <div class="form-group">
-               <label for="inputscore" class="col-sm-2 control-label">评分：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="score" class="form-control" id="inputscore" value="{{ book.score }}" disabled>
-                  </div>
-            </div>
-            <div class="form-group">
-               <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
-               <input type="file" name="file" id="inputfile" required>
-            </div>
-            <div class="form-action form-group">
-               <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
-                  <button type="submit" class="btn btn-primary">保存</button>
+   <div class="mycenter">
+       <form action method="post" enctype="multipart/form-data" class="form form-horizontal" role="form">{% csrf_token %}
+           <div class="col-lg-11 text-center text-info">
+           <H2>上传图书</H2>
+           </div>
+          <div class="form-group">
+              <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-book"></i></span>
+                  <input type="text" class="form-control" placeholder="书名" name="name" value="{{ book.name }}" disabled/>
+              </div>
+          </div>
+           <div class="form-group">
+              <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                  <input type="text" class="form-control" placeholder="作者" name="author" value="{{ book.author }}" disabled/>
+              </div>
+          </div>
+           <div class="form-group">
+              <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-thumbs-up"></i></span>
+                  <input type="text" class="form-control" placeholder="评分" name="score" value="{{ book.score }}" disabled/>
+              </div>
+          </div>
+           <div class="form-group">
+              <div class="input-group">
+                  <!--<span class="input-group-addon"><i class="glyphicon glyphicon-folder-open"></i></span>-->
+                  <input type="file" name="file" id="inputfile" required>
+              </div>
+          </div>
+           <div class="form-group">
+               <div class="input-group">
+                    <button type="submit" class="btn btn-default">上传</button>
                </div>
-            </div>
-         </form>
-      </div>
+           </div>
+      </form>
    </div>
 </div>
 {% endblock %}
