--- a/reading/templates/uploadfile.html
+++ b/reading/templates/uploadfile.html
@@ -8,11 +8,25 @@
    </div>
    <div>
       <ul class="nav navbar-nav">
-          <li><a href="/">书库</a></li>
-          <li class="active"><a href="/upload">上传</a></li>
-          <li><a href="/task">求书专区</a></li>
-          <li><a href="/contact">联系站长</a></li>
-          <li><a href="/user">个人中心</a></li>
+          <li><a href="/"><span class="glyphicon glyphicon-book"></span> 书库</a></li>
+          <li class="active"><a href="/upload"><span class="glyphicon glyphicon-open"></span> 上传</a></li>
+          <li><a href="/task"><span class="glyphicon glyphicon-tasks"></span> 求书专区</a></li>
+          <li><a href="/contact"><span class="glyphicon glyphicon-envelope"></span> 联系站长</a></li>
+      </ul>
+   </div>
+    <div>
+      <ul class="nav navbar-nav pull-right">
+         <li class="dropdown">
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                 {{ username }}
+                 <b class="caret"></b>
+             </a>
+             <ul class="dropdown-menu">
+                 <li><a href="/changepassword">修改密码</a></li>
+                 <li><a href="/logout">退出</a></li>
+             </ul>
+         </li>
+         <li><a>积分: {{ score }}</a></li>
       </ul>
    </div>
 </nav>
