修改 session 有效期为12小时 in reading

--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -110,7 +110,7 @@
                 <td>{{task.format}}</td>
                     {% if task.status == 0 %}
                         <td>
-                            <a class='book-down btn btn-mini btn-primary' href="/uploadfile/{{ task.bookname }}">
+                            <a class='book-down btn btn-mini btn-primary' href="/dotask/{{ task.bookname }}">
                                 <i class="fa fa-download" aria-hidden="true"></i>上传
                             </a>
                         </td>
