--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -35,59 +35,9 @@
 <div id="container" class='container'>
    <div class="row">
        <div class="span6 left">
-         <form action class="form form-horizontal" role="form" method="post">{% csrf_token %}
-            <div class="form-group">
-               <label for="inputbookname" class="col-sm-2 control-label">书名：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="bookname" class="form-control" id="inputbookname" required>
-                  </div>
-            </div>
-            <div class="form-group">
-               <label for="inputauthor" class="col-sm-2 control-label">作者：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="author" class="form-control" id="inputauthor" required>
-                  </div>
-            </div>
-             <div class="form-group">
-               <label for="inputimgurl" class="col-sm-2 control-label">图片链接：</label>
-                 <div class="col-sm-4">
-                     <input type="text" name="imgurl" class="form-control" id="inputimgurl" placeholder="如果忽略，将使用默认图片.">
-                  </div>
-            </div>
-            <div class="form-group">
-               <label for='inputScore' class="col-sm-2 control-label">评分：</label>
-                  <div class="col-sm-4">
-                     <select name='score' class="form-control" id="inputScore">
-                        <option value="9">9</option>
-                        <option value="8">8</option>
-                        <option value="7">7</option>
-                        <option value="6">6</option>
-                        <option value="5">5</option>
-                        <option value="4">4</option>
-                        <option value="3">3</option>
-                        <option value="2">2</option>
-                        <option value="1">1</option>
-                     </select>
-                  </div>
-            </div>
-             <div class="form-group">
-               <label for='inputformat' class="col-sm-2 control-label">格式：</label>
-                  <div class="col-sm-4">
-                     <select name='format' class="form-control" id="inputformat">
-                        <option value="any">任意</option>
-                        <option value="PDF">PDF</option>
-                        <option value="MOBI">MOBI</option>
-                        <option value="TXT">TXT</option>
-                        <option value="EPUB">EPUB</option>
-                     </select>
-                  </div>
-            </div>
-            <div class="form-action form-group">
-               <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
-                  <button type="submit" class="btn btn-primary">发布</button>
-               </div>
-            </div>
-         </form>
+           <a class='btn btn-lg btn-primary' href="/createtask">
+               <i class="fa fa-download" aria-hidden="true"></i>发布求书任务
+           </a>
            <hr>
             <table class="table table-striped">
               <!--<caption>求书任务</caption>-->
