--- a/reading/templates/createtask.html
+++ b/reading/templates/createtask.html
@@ -41,7 +41,7 @@
           <div class="form-group">
               <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-book"></i></span>
-                  <input type="text" class="form-control" placeholder="书名" name="name" />
+                  <input type="text" class="form-control" placeholder="书名" name="bookname" />
               </div>
           </div>
            <div class="form-group">
