--- a/reading/templates/contact.html
+++ b/reading/templates/contact.html
@@ -54,7 +54,7 @@
                   </div>
             </div>
             <div class="form-action">
-               <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
+               <div class="col-sm-2">
                   <button type="submit" class="btn btn-primary">发送</button>
                </div>
             </div>
