--- a/reading/templates/index.html
+++ b/reading/templates/index.html
@@ -37,7 +37,7 @@
         <div class="container">
         <form class="bs-example bs-example-form" role="form" action="/search/" method="get">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-xs-6">
                     <div class="input-group">
                         <input  name="q" value="" placeholder="书名/作者" type="text"  class="form-control">
                         <span class="input-group-btn">
