--- a/reading/templates/changepassword.html
+++ b/reading/templates/changepassword.html
@@ -2,6 +2,7 @@
 {% block content %}
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container">
    <div class="navbar-header">
       <a class="navbar-brand" href="/">阅钉Reading</a>
    </div>
@@ -28,6 +29,7 @@
          <li><a>积分: {{ score }}</a></li>
       </ul>
    </div>
+    </div>
 </nav>
 
 
