--- a/reading/templates/createtask.html
+++ b/reading/templates/createtask.html
@@ -3,6 +3,7 @@
 {% block content %}
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
+<div class="container">
    <div class="navbar-header">
       <a class="navbar-brand" href="/">阅钉Reading</a>
    </div>
@@ -29,6 +30,7 @@
          <li><a>积分: {{ score }}</a></li>
       </ul>
    </div>
+</div>
 </nav>
 
 
