--- a/reading/templates/register.html
+++ b/reading/templates/register.html
@@ -2,6 +2,7 @@
 {% block content %}
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container">
    <div class="navbar-header">
       <a class="navbar-brand" href="/">阅钉Reading</a>
    </div>
@@ -11,6 +12,7 @@
          <li class="active"><a href="/register">注册</a></li>
       </ul>
    </div>
+    </div>
 </nav>
 
 
