--- a/reading/templates/register_success.html
+++ b/reading/templates/register_success.html
@@ -2,6 +2,7 @@
 {% block content %}
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
+   <div class="container">
    <div class="navbar-header">
       <a class="navbar-brand" href="/">阅钉Reading</a>
    </div>
@@ -10,6 +11,7 @@
          <li><a href="/login">登录</a></li>
          <li class="active"><a href="/register">注册</a></li>
       </ul>
+   </div>
    </div>
 </nav>
 
