--- a/reading/static/reading/css/mystyle.css
+++ b/reading/static/reading/css/mystyle.css
@@ -30,7 +30,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     height: 350px;
-    width:400px;
+    width: 400px;
     padding: 5%;
     padding-left: 5%;
     padding-right: 5%;
@@ -38,7 +38,8 @@ body {
 .mycenter mysign{
     width: 440px;
 }
-.mycenter checkbox,button{
+
+.mycenter button{
     margin-top:2%;
     margin-left: 250%;
 
