--- a/reading/templates/contact.html
+++ b/reading/templates/contact.html
@@ -57,7 +57,7 @@
             </div>
             <div class="form-action">
                <div class="col-sm-2">
-                  <button type="submit" class="btn btn-primary">发送</button>
+                  <button type="submit" class="btn btn-primary" style="margin-left:200%">发送</button>
                </div>
             </div>
          </form>
