--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -15,6 +15,18 @@
     </div>
 </nav>
 
+{% if len(errors) != 0 %}
+<div class='container'>
+<div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert"
+      aria-hidden="true">
+      &times;   </button>{{ errors }}
+</div>
+</div>
+{% endif %}
+
+
+
 <div id="container" class='container'>
    <div class="mycenter">
        <form action method="post" class="form form-horizontal" role="form">{% csrf_token %}
