--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -15,7 +15,7 @@
     </div>
 </nav>
 
-{% if len(errors) != 0 %}
+{% if errors != '' %}
 <div class='container'>
 <div class="alert alert-danger alert-dismissable">
     <button type="button" class="close" data-dismiss="alert"
