修改 session 有效期为12小时 in reading

--- a/reading/templates/changepassword.html
+++ b/reading/templates/changepassword.html
@@ -32,6 +32,16 @@
     </div>
 </nav>
 
+{% if errors != '' %}
+<div class='container'>
+<div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert"
+      aria-hidden="true">
+      &times;   </button>{{ errors }}
+</div>
+</div>
+{% endif %}
+
 
 <div id="container" class='container'>
    <div class="mycenter">
