添加图标和帮助信息.

--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="description" content="免费电子书下载">
     <meta name="keywords" content="Kindle,eBook,Read,Free,Push,mobi,pdf,免费,阅读,电子书">
     {% load static %}
+    <link rel="icon" href="{% static '/reading/img/reading.png' %}">
     <link href="{% static '/reading/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static '/reading/css/bootstrapValidator.min.css' %}" rel="stylesheet">
     <link href="{% static '/reading/css/mystyle.css' %}" rel="stylesheet">
