--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -33,12 +33,20 @@
     </div>
 </nav>
 
+<div class='container'>
+<div class="alert alert-info">
+    <p>1、如果您的求书任务已完成，请直接去书库中搜索下载。</p>
+    <p>2、如果存在未完成的求书任务，您可点击上传按钮，上传书友需要的书籍。</p>
+    <p>3、上传一本书籍会赠送您2个积分。</p>
+</div>
+</div>
+
 
 <div id="container" class='container'>
    <div class="row">
        <div class="span6 left">
            <a class='btn btn-lg btn-success' href="/createtask">
-               <i class="fa fa-download" aria-hidden="true"></i>发布求书任务
+               <i class="fa fa-download" aria-hidden="true"></i>发布求书信息
            </a>
            <hr>
             <table class="table table-striped">
