--- a/reading/templates/upload.html
+++ b/reading/templates/upload.html
@@ -33,6 +33,14 @@
 </div>
 </nav>
 
+<div class='container'>
+<div class="alert alert-info">
+    <p>1、上传书籍会获得2个积分。</p>
+    <p>2、上传书籍前，请先在书库搜索该书籍，如果存在书籍信息，不存在文件，直接点击上传按钮即可上传书籍文件。</p>
+    <p>3、请录入书籍名称、作者、封面链接（非必填）、评分、文件，然后点击上传。</p>
+</div>
+</div>
+
 
 
 <div id="container" class='container'>
